# markdown-index-autogen

./: .pre-commit-hooks.yaml  LICENSE  README.md  autogen.py  gen.py  setup.cfg  setup.py
