[metadata]
name = markdown-index-autogen
version = 0.1.0
description = Automatically generate / refresh markdown index with updated folder structure
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/ksang/markdown-index-autogen
author = ksang
author_email = kaitoy@qq.com
license = MIT
license_file = LICENSE
classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
py_modules = autogen
python_requires = >=3.7

[options.entry_points]
console_scripts =
    markdown-index-autogen = autogen:main

[bdist_wheel]
universal = True

[mypy]
check_untyped_defs = true
disallow_any_generics = true
disallow_incomplete_defs = true
disallow_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true

[mypy-testing.*]
disallow_untyped_defs = false

[mypy-tests.*]
disallow_untyped_defs = false